          returns the full list of outcome probabilities
    - API changes for
          qpp::QCircuit::get_gate_count()
          qpp::QCircuit::get_gate_depth()
          qpp::QCircuit::get_measurement_count()
          qpp::QCircuit::get_measurement_depth()
      so now the old std::string overloads take instead a qpp::cmat as argument
    - Implemented ["classes/circuits/circuits.hpp"]:
          qpp::QCircuit::measure_all() - measures all remaining available qudits
    - Implemented the random qpp::QCircuit free function generators in
      ["classes/circuits/circuits.hpp"]:
          qpp::random_circuit_count() - random QCircuit w.r.t. gate count
          qpp::random_circuit_depth() - random QCircuit w.r.t. gate depth
    - Implemented ["classes/gates.hpp"]:
          qpp::Gates::GATE() - constructs the matrix representation of a
                               multi-partite gate that acts on a subsystem
    - Implemented ["operations.hpp"]:
          qpp::applyCTRL_FAN() - applies CTRL-CTRL-...-CTRL-U-U-...-U
    - Implemented ["instruments.hpp"]:
          qpp::sample() - samples from a quantum state. Use this function
                          whenever you are not interested in the output quantum
                          state, but interested only in statistics; it is
                          significantly faster than its "qpp::measure()"-type
                          functions.
    - Added copy/deepcopy support for all pyqpp classes:
          QCircuit, QEngine, QNoisyEngine<>, Dynamic_Bitset, Bit_circuit
    - Added "context" to exception throwing, so now it is obvious which argument
      triggers an exception
    - EIGEN3_INSTALL_DIR can now be set as an OS environment variable (in
      addition to a CMake variable). If both are set, then the CMake variable
      trumps. If none are set, the system tries to detect the location of the
      Eigen3 library automatically.
    - Marked high performance functions with the "custom" attribute