@@ -1,4 +1,4 @@
-Copyright (c) 2013 - 2022 softwareQ Inc. All rights reserved.
+Copyright (c) 2013 - 2023 softwareQ Inc. All rights reserved.
 
 MIT License
 
