@@ -1,7 +1,7 @@
 /*
  * This file is part of Quantum++.
  *
- * Copyright (c) 2013 - 2022 softwareQ Inc. All rights reserved.
+ * Copyright (c) 2013 - 2023 softwareQ Inc. All rights reserved.
  *
  * MIT License
  *
@@ -127,7 +127,7 @@ template <typename Derived>
 auto constexpr is_ket() {
     return (eval_t<Derived>::ColsAtCompileTime == 1);
 }
-} /* namespace internal */
+} /* namespace qpp::internal */
 
 /**
  * \brief Eigen type (ket/density matrix) deduced from the expression Derived
