@@ -34,7 +34,7 @@ ext_modules = [
 
 setup(
     name='pyqpp',
-    version='3.1',
+    version='4.0',
     description='Python 3 wrapper for Quantum++',
     long_description=open('pyqpp/README.md').read(),
     long_description_content_type='text/markdown',
